[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "network-change"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.0.0-alpha.13", features = ["napi4"] }
napi-derive = "3.0.0-alpha.13"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
