[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "network-change"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.0.0-alpha", features = ["napi4"] }
napi-derive = "3.0.0-alpha"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
bitflags = "2"
bytes = "1"
windows = { version = "0.58.0", features = [
    # for INetworkListManager
    "Win32_Networking_NetworkListManager",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    # for COM interfaces
    "Win32_System_Com",
    # for error handling
    "Win32_System_Ole",
    # for implementing INetworkListManagerEvents
    "implement",
] }
windows-core = "0.58.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
